--- a/public/css/index.css
+++ b/public/css/index.css
@@ -154,7 +154,7 @@
 }
 .content {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: large;
+  font-size: medium;
   color: #343a40;
 }
 .title {
